--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/antlr4-runtime-4.9.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/byte-buddy-1.12.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/classmate-1.5.1.jar"/>
@@ -32,5 +27,6 @@
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/mysql-connector-java-8.0.28.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/protobuf-java-3.11.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/dti/Desktop/java-exerc1605/lib/txw2-3.0.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
